--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ color: green;
 }
 #product1 .pro img {
     width: 100%;
-    border-radius: 20px;
+    border-radius: 10px;
     transition: 0.5s ease-in-out; 
 }
 #product1 .pro img:hover {
@@ -336,4 +336,67 @@ footer{
     font-size: 18px;
     color:chocolate;
     font-weight: bold;
+ }
+
+
+ /* Responsive website Degin */
+ @media (min-widht:568px) and (max-width:768px) {
+    nav {
+        flex-direction:column;
+        text-align: center;
+    }
+    .hero-section {
+    flex-direction: column;
+    text-align: center;
+    padding: 20px;
+  }
+
+    .text-box h1 {
+        font-size: 24px;
+    }
+
+    .pro-container {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .pro {
+        width: 100%;
+        margin: 10px auto;
+    }
+
+    footer {
+        flex-direction: column;
+        text-align: center;
+        color:#28a745;
+
+    }
+    
+ }
+ @media (min-width:768px) and (min-width:1024px) {
+    nav {
+        flex-direction: column;
+        text-align: center;
+    }
+    .text-box h1{
+        font-size: 50px;
+        text-align: center;
+    }
+
+    .pro-container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .pro {
+        width: 100%;
+        display: grid;
+        grid-template-columns: (3, 3fr);
+    }
+    .footer {
+        flex-direction: column;
+        text-align: center;
+        background-color: #0000ff;
+        color:#fff;
+        font-size: 24px;
+    }
  }
